Squashed commit of the following:
root-serverを作った
